move files to folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.27.9)
+get_filename_component(LIB_ID ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 if(GEN_DOCS MATCHES ON)
     set(DOXYGEN_FOUND "NO")
@@ -16,7 +17,7 @@ if(GEN_DOCS MATCHES ON)
         set(DOXYGEN_EXTRACT_ALL YES)
         set(DOXYGEN_GENERATE_TREEVIEW YES)
 
-        file(GLOB HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
+        file(GLOB HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${LIB_ID}/*.hpp)
         doxygen_add_docs(docs ${HEADER_FILES} ALL)
     endif()
     return()
@@ -72,8 +73,7 @@ target_compile_definitions(filex PRIVATE FX_INCLUDE_USER_DEFINE_FILE)
 target_compile_definitions(levelx PRIVATE LX_INCLUDE_USER_DEFINE_FILE)
 set_target_properties(threadx filex levelx PROPERTIES COMPILE_FLAGS -w)
 
-get_filename_component(LIB_ID ${CMAKE_CURRENT_LIST_DIR} NAME)
-file(GLOB_RECURSE LIB_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+file(GLOB_RECURSE LIB_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${LIB_ID}/*.cpp)
 add_library(${LIB_ID} STATIC ${LIB_SOURCES})
 
 target_include_directories(${LIB_ID} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
